Correct styling error in .visible class

--- a/finished-project/css/call-demo.css
+++ b/finished-project/css/call-demo.css
@@ -307,7 +307,7 @@ header h1 {
 }
 
 .visible {
-  display: table-row;
+  display: visible;
 }
 
 .invisible {
